# rosetta-python

./: .flake8  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  rosetta_python.rst
src/rosetta_python/: __init__.py  main.py  math_funcs.py
tests/: test_main.py  test_math_funcs.py
