[project]
name = "rosetta_python"
version = "2023.10.1"
description = "A package for demonstrating a Python software development environment"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {email = "ian.hopkinson@gbgplc.com"},
  {name = "Ian Hopkinson"}
]

dependencies = [
  "black==23.10.0",
  "flake8>=6.1.0",
  "pytest>=7.4.2",
  "pylint>=3.0.1",
  "Sphinx>=5.3.0",
  "sphinx-rtd-theme>=1.1.1",
  "sphinx_autodoc_typehints==1.19.5",
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''
